test_suite/alan-2022-examples/failing/002660_mutation.alan
source wK begin vc := false array 279 end
